el menu se ve en vs pero no local
no se

--- a/M04 - Llenguatge de marques/html/css/all.css
+++ b/M04 - Llenguatge de marques/html/css/all.css
@@ -12,7 +12,7 @@ h1 {
     font-family: 'Ubuntu Sans', sans-serif;
     text-align: center;
     color: #000; 
-    font-size: 50px; /* Ajusta el tamaño 
+    font-size: 50px; 
     margin: 50px;
 }
 
